[gd_scene load_steps=11 format=3 uid="uid://diog7mco415dw"]

[ext_resource type="Script" uid="uid://6ueenayoxh8s" path="res://UI/ui.gd" id="1_beu5d"]
[ext_resource type="PackedScene" uid="uid://be37vyuvt12r8" path="res://UI/ItemPreview.tscn" id="2_dajm1"]
[ext_resource type="Script" uid="uid://cwsp2s5bgejb4" path="res://UI/scalerGameplay.gd" id="2_h81ot"]
[ext_resource type="Texture2D" uid="uid://be4ot8awe6pda" path="res://UI/Elements/E.PNG" id="3_6rr40"]
[ext_resource type="Texture2D" uid="uid://c8s240ycdvf1l" path="res://UI/Elements/ESelected.PNG" id="4_0w6e5"]
[ext_resource type="Texture2D" uid="uid://p8hbs2lss34l" path="res://UI/Elements/Burger.png" id="5_o2jkc"]
[ext_resource type="Texture2D" uid="uid://c2r5vceg32arv" path="res://UI/Elements/BurgerSelected.png" id="6_2qbci"]
[ext_resource type="Script" uid="uid://gjcbt5kmqjdd" path="res://addons/touch_screen_joystick/touch_screen_joystick.gd" id="8_ow1yt"]
[ext_resource type="Texture2D" uid="uid://bndtwwhsec260" path="res://UI/Elements/BackJoystick.PNG" id="9_o2t6a"]
[ext_resource type="Texture2D" uid="uid://db1qwj7ik8kcc" path="res://UI/Elements/CursoreJoystick.PNG" id="10_8gukh"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_beu5d")

[node name="Scaler" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_h81ot")
base_resolution = null

[node name="Joystick" type="Control" parent="Scaler"]
layout_mode = 3
anchors_preset = 0
offset_left = 153.0
offset_top = 502.0
offset_right = 153.0
offset_bottom = 502.0
mouse_force_pass_scroll_events = false
script = ExtResource("8_ow1yt")
antialiased = true
use_textures = true
base_texture = ExtResource("9_o2t6a")
base_scale = Vector2(0.4, 0.4)
knob_texture = ExtResource("10_8gukh")
knob_scale = Vector2(0.5, 0.5)
use_input_actions = true

[node name="InteractionButton" type="TextureButton" parent="Scaler"]
layout_mode = 0
offset_left = 924.0
offset_top = 515.0
offset_right = 2076.0
offset_bottom = 1163.0
scale = Vector2(0.192993, 0.192993)
size_flags_horizontal = 8
size_flags_vertical = 10
mouse_force_pass_scroll_events = false
texture_normal = ExtResource("3_6rr40")
texture_hover = ExtResource("4_0w6e5")

[node name="PauseButton" type="TextureButton" parent="Scaler"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 890.0
offset_right = 1914.0
offset_bottom = 593.0
grow_horizontal = 0
scale = Vector2(0.207898, 0.207898)
size_flags_horizontal = 8
size_flags_vertical = 2
mouse_force_pass_scroll_events = false
texture_normal = ExtResource("5_o2jkc")
texture_hover = ExtResource("6_2qbci")

[node name="ItemPreview" parent="Scaler" instance=ExtResource("2_dajm1")]
visible = false
layout_mode = 1
offset_left = 556.0
offset_top = 304.0
offset_right = 556.0
offset_bottom = 304.0

[connection signal="pressed" from="Scaler/InteractionButton" to="." method="_on_interaction_button_pressed"]
[connection signal="pressed" from="Scaler/PauseButton" to="." method="_on_pause_button_pressed"]
